wdl-analysis/tests/validation/float-out-of-range.errors
warning[UnusedDeclaration]: unused declaration `a`
  ┌─ tests/validation/float-out-of-range:6:11
  │
6 │     Float a = 0.
  │           ^

warning[UnusedDeclaration]: unused declaration `b`
  ┌─ tests/validation/float-out-of-range:7:11
  │
7 │     Float b = 0.0
  │           ^

warning[UnusedDeclaration]: unused declaration `c`
  ┌─ tests/validation/float-out-of-range:8:11
  │
8 │     Float c = 1234.1234
  │           ^

warning[UnusedDeclaration]: unused declaration `d`
  ┌─ tests/validation/float-out-of-range:9:11
  │
9 │     Float d = 123e123
  │           ^

warning[UnusedDeclaration]: unused declaration `e`
   ┌─ tests/validation/float-out-of-range:10:11
   │
10 │     Float e = 0.1234
   │           ^

warning[UnusedDeclaration]: unused declaration `f`
   ┌─ tests/validation/float-out-of-range:11:11
   │
11 │     Float f = -10.
   │           ^

warning[UnusedDeclaration]: unused declaration `g`
   ┌─ tests/validation/float-out-of-range:12:11
   │
12 │     Float g = .2
   │           ^

warning[UnusedDeclaration]: unused declaration `h`
   ┌─ tests/validation/float-out-of-range:13:11
   │
13 │     Float h = 1234.1234e1234
   │           ^

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range:13:15
   │
13 │     Float h = 1234.1234e1234
   │               ^^^^^^^^^^^^^^ this literal float is not in range

warning[UnusedDeclaration]: unused declaration `i`
   ┌─ tests/validation/float-out-of-range:14:11
   │
14 │     Float i = -1234.1234e1234
   │           ^

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range:14:15
   │
14 │     Float i = -1234.1234e1234
   │               ^^^^^^^^^^^^^^^ this literal float is not in range

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range:24:12
   │
24 │         h: 1234.1234e1234
   │            ^^^^^^^^^^^^^^ this literal float is not in range

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range:25:12
   │
25 │         i: -1234.1234e1234
   │            ^^^^^^^^^^^^^^^ this literal float is not in range

